# ok_arduino_logging

./: .gitignore  README.md  library.properties
src/: ok_logging.cpp  ok_logging.h  ok_logging_config.cpp  ok_logging_esp32.h  ok_logging_etl.cpp  ok_serial_begin.cpp
tests/: conftest.py  mise.toml  pyproject.toml  run_tests.py
tests/basic_logging/: basic_logging.ino  basic_logging_test.py  diagram.json  scenario.yaml  sketch.yaml  test.yaml  wokwi.toml
tests/basic_logging_test/: basic_logging_test.ino  serial_regex.txt  wokwi.toml
tests/serial_begin_esp32_nonusb/: scenario.yaml  serial_begin_esp32_nonusb.ino  serial_begin_esp32_nonusb_test.py  sketch.yaml  wokwi.toml
tests/serial_begin_esp32c3_usb/: diagram.json  scenario.yaml  serial_begin_esp32c3_usb.ino  serial_begin_esp32c3_usb_test.py  sketch.yaml  wokwi.toml
tests/serial_begin_rp2040_nonusb/: diagram.json  scenario.yaml  serial_begin_rp2040_nonusb.ino  serial_begin_rp2040_nonusb_test.py  sketch.yaml  wokwi.toml
tests/serial_begin_rp2040_usb/: diagram.json  scenario.yaml  serial_begin_rp2040_usb.ino  wokwi.toml
tests/set_logging_function/: diagram.json  scenario.yaml  set_logging_function.ino  set_logging_function_test.py  wokwi.toml
tests/set_logging_stream/: diagram.json  scenario.yaml  set_logging_stream.ino  set_logging_stream_test.py  wokwi.toml
