# Python project metadata, including dependencies & tool settings               
# https://snarky.ca/what-the-heck-is-pyproject-toml

[project]
name = "ok_arduino_logging_tests"
version = "0.1"
requires-python = ">=3.12"

dependencies = [
  "ok-logging-setup>=0.10",
  "ok-subprocess-defaults>=0.1",
  "pytest>=9.0.1",
]

[tool.pytest]
norecursedirs = ["*.tmp"]
log_level = "CRITICAL"  # logs end up in stdout per conftest.py
